--- a/WordPress-Essentials/css.css
+++ b/WordPress-Essentials/css.css
@@ -165,8 +165,10 @@ nav ul li i {
 .about-course-h3 {
     border-bottom: 4px solid #FFBD4D;
     color: #234465;
-    margin-bottom: 0;
     font-size: 24px;
+}
+.about-course-h3 h3{
+    margin-bottom: 0;
 }
 
 .about-course-button {
@@ -191,14 +193,20 @@ nav ul li i {
 
 .skills-section-uls li {
     list-style: none;
-    padding: 10px;
+    padding: 5px;
     font-size: 20px;
     color: #5D6871;
+}
+.skills-section ul li i{
+    color: #FFA000;
+    font-size: 30px;
+    padding-right: 5px;
 }
 
 .skills-section-h3 {
     border-bottom: 4px solid #FFBD4D;
     color: #234465;
+    font-size: 24px;
 }
 
 .skills-section-wrapper {
@@ -208,6 +216,10 @@ nav ul li i {
 
 .skills-section-uls {
     margin: 0px 50px;
+}
+.skills-section-uls ul{
+    padding-bottom: 30px;
+    margin-top: 0;
 }
 
 .topic-section {
