fixed code, adding new features

--- a/WordPress-Essentials/css.css
+++ b/WordPress-Essentials/css.css
@@ -4,7 +4,9 @@ body {
     margin: 0;
     font-family: 'Alegreya', serif;
 }
-
+a{
+    color: inherit;
+}
 h1 {
     font-size: 60px;
     margin: 15px;
